--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,29 +1,34 @@
 name: app_chat
+version: 1.0.0+1
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
-
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 environment:
   sdk: ^3.6.0
-
 
 dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  # for using cupertino icons
   cupertino_icons: ^1.0.8
-  # firebase core
+
+  # for integrating firebase
   firebase_core: ^3.9.0
 
+  # for using firebase authentication
   firebase_auth: ^5.3.4
 
+  # for using google sign in
   google_sign_in: ^6.2.2
 
+  # for using cloud firestore
   cloud_firestore: ^5.6.0
+
+  # for using net
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
@@ -34,14 +39,12 @@ flutter_launcher_icons:
   android: "ic_launcher"
   ios: true
   image_path: "images/chat.png"
-  min_sdk_android: 21 
+  min_sdk_android: 21
   remove_alpha_ios: true
 
   flutter_lints: ^5.0.0
 
-
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
